// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`insight-engine baseline (sales + metas, no inventory) > activates meta_gap_temporal but keeps inventory_stock silent 1`] = `
{
  "datasetShape": {
    "inventory": 0,
    "metas": 900,
    "sales": 94838,
  },
  "engineStatus": {
    "candidatesSelected": 11,
    "candidatesTotal": 207,
    "origins": {
      "cross_engine": 1,
      "executive_compression": 0,
      "legacy_render_adapter": 0,
      "motor1_legacy": 0,
      "motor2_registry_loop": 113,
      "special_builder": 93,
      "unknown": 0,
    },
  },
  "poolAfterFilter": {
    "passRate": 0.545,
    "total": 6,
  },
  "poolReturnedByEngine": {
    "byInsightType": {
      "change": 2,
      "contribution": 2,
      "meta_gap_temporal": 1,
      "migration": 2,
      "outlier": 1,
      "product_dead": 1,
      "trend": 2,
    },
    "total": 11,
  },
  "specialBuilderOutputs": {
    "change_point": 68,
    "cliente_dormido": 2,
    "co_decline": 1,
    "correlation": 0,
    "cross_delta": 9,
    "inventory_stock": 0,
    "meta_gap_temporal": 3,
    "migration": 1,
    "outlier_builder": 4,
    "product_dead": 1,
    "steady_share": 4,
  },
}
`;

exports[`insight-engine baseline (sales only, no metas no inventory) > runs cleanly and inventory/meta builders emit 0 candidates 1`] = `
{
  "datasetShape": {
    "inventory": 0,
    "metas": 0,
    "sales": 94838,
  },
  "engineStatus": {
    "candidatesSelected": 10,
    "candidatesTotal": 201,
    "origins": {
      "cross_engine": 1,
      "executive_compression": 0,
      "legacy_render_adapter": 0,
      "motor1_legacy": 0,
      "motor2_registry_loop": 110,
      "special_builder": 90,
      "unknown": 0,
    },
  },
  "poolAfterFilter": {
    "passRate": 0.5,
    "total": 5,
  },
  "poolReturnedByEngine": {
    "byInsightType": {
      "change": 2,
      "contribution": 2,
      "migration": 2,
      "outlier": 1,
      "product_dead": 1,
      "trend": 2,
    },
    "total": 10,
  },
  "specialBuilderOutputs": {
    "change_point": 68,
    "cliente_dormido": 2,
    "co_decline": 1,
    "correlation": 0,
    "cross_delta": 9,
    "inventory_stock": 0,
    "meta_gap_temporal": 0,
    "migration": 1,
    "outlier_builder": 4,
    "product_dead": 1,
    "steady_share": 4,
  },
}
`;

exports[`insight-engine golden master (demo dataset, UDS) > produces stable structural output for demo dataset 1`] = `
{
  "rows": [
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 3238,
      "insightTypeId": "meta_gap_temporal",
      "member": "Carlos Ramírez",
      "metricId": "cumplimiento_meta",
      "rank": 1,
      "root_problem_key": null,
      "scoreRounded": 0.6786,
      "severity": "MEDIA",
      "time_scope": "monthly",
    },
    {
      "dimensionId": "producto",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 7567,
      "insightTypeId": "product_dead",
      "member": "Cacahuates 100g",
      "metricId": "venta",
      "rank": 2,
      "root_problem_key": null,
      "scoreRounded": 0.6,
      "severity": "MEDIA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 1547,
      "insightTypeId": "meta_gap_temporal",
      "member": "Miguel Ángel Díaz",
      "metricId": "cumplimiento_meta",
      "rank": 3,
      "root_problem_key": null,
      "scoreRounded": 0.2806,
      "severity": "BAJA",
      "time_scope": "monthly",
    },
    {
      "dimensionId": "producto",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 12003,
      "insightTypeId": "stock_risk",
      "member": "Té Helado 500ml",
      "metricId": "inventario",
      "rank": 4,
      "root_problem_key": null,
      "scoreRounded": 0.4,
      "severity": "BAJA",
      "time_scope": "rolling",
    },
    {
      "dimensionId": "cliente",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": 0.54,
      "impactoValorRounded": 346,
      "insightTypeId": "migration",
      "member": "Super Económico",
      "metricId": "venta",
      "rank": 5,
      "root_problem_key": null,
      "scoreRounded": 0.244,
      "severity": "BAJA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "cliente",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": 0.69,
      "impactoValorRounded": 46,
      "insightTypeId": "migration",
      "member": "Tienda El Carmen",
      "metricId": "num_transacciones",
      "rank": 6,
      "root_problem_key": null,
      "scoreRounded": 0.2659,
      "severity": "BAJA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "categoria",
      "direction": "down",
      "hasAction": false,
      "hasConclusion": false,
      "hasDescription": true,
      "impactoPctRounded": 150.98,
      "impactoValorRounded": -1780,
      "insightTypeId": "contribution",
      "member": "Snacks",
      "metricId": "venta",
      "rank": 7,
      "root_problem_key": null,
      "scoreRounded": 1,
      "severity": "ALTA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": false,
      "hasConclusion": false,
      "hasDescription": true,
      "impactoPctRounded": 113.66,
      "impactoValorRounded": -1340,
      "insightTypeId": "contribution",
      "member": "Carlos Ramírez",
      "metricId": "venta",
      "rank": 8,
      "root_problem_key": null,
      "scoreRounded": 1,
      "severity": "ALTA",
      "time_scope": "mtd",
    },
  ],
  "summary": {
    "datasetSize": {
      "inventory": 20,
      "metas": 900,
      "sales": 94838,
    },
    "engineStatus": {
      "candidatesSelected": 12,
      "candidatesTotal": 202,
      "detectorsEmitted": {
        "change_point": 68,
        "correlation": 0,
        "meta_gap_temporal": 3,
        "motor1": 114,
        "outlier_builder": 4,
        "steady_share": 4,
        "z9_hydration": 15,
      },
      "origins": {
        "cross_engine": 1,
        "executive_compression": 0,
        "legacy_render_adapter": 0,
        "motor1_legacy": 0,
        "motor2_registry_loop": 107,
        "special_builder": 94,
        "unknown": 0,
      },
      "rankerAudit": {
        "portfolioPreview": [
          {
            "currentRank": 1,
            "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Carlos Ramírez",
            "portfolioRank": 1,
            "portfolioScore": 0.538,
            "reasons": [
              "economic_impact",
              "strategic_signal",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 2,
            "id": "special_builder:product_dead:producto:venta:Cacahuates 100g",
            "portfolioRank": 2,
            "portfolioScore": 0.501,
            "reasons": [
              "economic_impact",
              "strategic_signal",
              "diversity_preserved",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 3,
            "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Miguel Ángel Díaz",
            "portfolioRank": 3,
            "portfolioScore": 0.385,
            "reasons": [
              "economic_impact",
              "strategic_signal",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 4,
            "id": "special_builder:outlier:cliente:frecuencia_compra:Mercado Central",
            "portfolioRank": 7,
            "portfolioScore": 0.318,
            "reasons": [
              "economic_impact",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 5,
            "id": "special_builder:stock_risk:producto:inventario:Té Helado 500ml",
            "portfolioRank": 5,
            "portfolioScore": 0.379,
            "reasons": [
              "economic_impact",
              "diversity_preserved",
              "actionable",
              "causal_context",
            ],
          },
        ],
        "protectedCount": 9,
        "regularCap": 6,
        "regularCount": 137,
        "regularSelected": 6,
        "selectedByOrigin": {
          "cross_engine": 0,
          "executive_compression": 0,
          "legacy_render_adapter": 0,
          "motor1_legacy": 0,
          "motor2_registry_loop": 7,
          "special_builder": 5,
          "unknown": 0,
        },
      },
      "stages": {
        "cross_engine": {
          "discardedCount": 0,
          "inputCount": 2767,
          "outputCount": 1,
          "reason": null,
          "status": "ok",
        },
        "dedup": {
          "discardedCount": 50,
          "inputCount": 202,
          "outputCount": 152,
          "reason": null,
          "status": "ok",
        },
        "motor1_legacy": {
          "discardedCount": null,
          "inputCount": 0,
          "outputCount": 0,
          "reason": "Legacy insights enter later through render_adapter/buildRichBlocksFromInsights.",
          "status": "skipped",
        },
        "motor2_registry_loop": {
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 107,
          "reason": null,
          "status": "ok",
        },
        "ranker": {
          "discardedCount": 137,
          "inputCount": 152,
          "outputCount": 15,
          "reason": null,
          "status": "ok",
        },
        "special_builders": {
          "builders": {
            "change_point": {
              "output": 68,
            },
            "cliente_dormido": {
              "output": 2,
            },
            "co_decline": {
              "output": 1,
            },
            "correlation": {
              "output": 0,
            },
            "cross_delta": {
              "discarded": 37,
              "output": 9,
            },
            "inventory_stock": {
              "output": 2,
            },
            "meta_gap_temporal": {
              "output": 3,
            },
            "migration": {
              "output": 0,
            },
            "outlier_builder": {
              "output": 4,
            },
            "product_dead": {
              "output": 1,
            },
            "steady_share": {
              "output": 4,
            },
          },
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 95,
          "reason": null,
          "status": "ok",
        },
      },
    },
    "poolAfterFilter": {
      "byDimension": {
        "categoria": 1,
        "cliente": 2,
        "producto": 2,
        "vendedor": 3,
      },
      "byInsightType": {
        "contribution": 2,
        "meta_gap_temporal": 2,
        "migration": 2,
        "product_dead": 1,
        "stock_risk": 1,
      },
      "bySeverity": {
        "ALTA": 2,
        "BAJA": 4,
        "MEDIA": 2,
      },
      "passRate": 0.667,
      "total": 8,
    },
    "poolReturnedByEngine": {
      "byDimension": {
        "categoria": 1,
        "cliente": 6,
        "producto": 2,
        "vendedor": 3,
      },
      "byInsightType": {
        "change": 1,
        "contribution": 2,
        "meta_gap_temporal": 2,
        "migration": 2,
        "outlier": 1,
        "product_dead": 1,
        "stock_risk": 1,
        "trend": 2,
      },
      "bySeverity": {
        "ALTA": 5,
        "BAJA": 4,
        "MEDIA": 3,
      },
      "total": 12,
    },
    "runtimeAudit": {
      "origins": {
        "cross_engine": 0,
        "executive_compression": 0,
        "legacy_render_adapter": 0,
        "motor1_legacy": 0,
        "motor2_registry_loop": 7,
        "special_builder": 5,
        "unknown": 0,
      },
      "portfolioPreview": [
        {
          "currentRank": 1,
          "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Carlos Ramírez",
          "portfolioRank": 1,
          "portfolioScore": 0.538,
          "reasons": [
            "economic_impact",
            "strategic_signal",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 2,
          "id": "special_builder:product_dead:producto:venta:Cacahuates 100g",
          "portfolioRank": 2,
          "portfolioScore": 0.501,
          "reasons": [
            "economic_impact",
            "strategic_signal",
            "diversity_preserved",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 3,
          "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Miguel Ángel Díaz",
          "portfolioRank": 3,
          "portfolioScore": 0.385,
          "reasons": [
            "economic_impact",
            "strategic_signal",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 4,
          "id": "special_builder:outlier:cliente:frecuencia_compra:Mercado Central",
          "portfolioRank": 7,
          "portfolioScore": 0.318,
          "reasons": [
            "economic_impact",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 5,
          "id": "special_builder:stock_risk:producto:inventario:Té Helado 500ml",
          "portfolioRank": 5,
          "portfolioScore": 0.379,
          "reasons": [
            "economic_impact",
            "diversity_preserved",
            "actionable",
            "causal_context",
          ],
        },
      ],
      "stages": {
        "cross_engine": {
          "discardedCount": 0,
          "inputCount": 2767,
          "outputCount": 1,
          "reason": null,
          "status": "ok",
        },
        "dedup": {
          "discardedCount": 50,
          "inputCount": 202,
          "outputCount": 152,
          "reason": null,
          "status": "ok",
        },
        "executive_compression": {
          "discardedCount": null,
          "inputCount": 8,
          "outputCount": 0,
          "reason": null,
          "status": "skipped",
        },
        "gate": {
          "discardedCount": 4,
          "inputCount": 12,
          "outputCount": 8,
          "reason": null,
          "status": "ok",
        },
        "motor1_legacy": {
          "discardedCount": null,
          "inputCount": 0,
          "outputCount": 0,
          "reason": "Legacy insights enter later through render_adapter/buildRichBlocksFromInsights.",
          "status": "skipped",
        },
        "motor2_registry_loop": {
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 107,
          "reason": null,
          "status": "ok",
        },
        "ranker": {
          "discardedCount": 137,
          "inputCount": 152,
          "outputCount": 15,
          "reason": null,
          "status": "ok",
        },
        "render_adapter": {
          "discardedCount": null,
          "inputCount": 8,
          "outputCount": 8,
          "reason": null,
          "status": "ok",
        },
        "special_builders": {
          "builders": {
            "change_point": {
              "output": 68,
            },
            "cliente_dormido": {
              "output": 2,
            },
            "co_decline": {
              "output": 1,
            },
            "correlation": {
              "output": 0,
            },
            "cross_delta": {
              "discarded": 37,
              "output": 9,
            },
            "inventory_stock": {
              "output": 2,
            },
            "meta_gap_temporal": {
              "output": 3,
            },
            "migration": {
              "output": 0,
            },
            "outlier_builder": {
              "output": 4,
            },
            "product_dead": {
              "output": 1,
            },
            "steady_share": {
              "output": 4,
            },
          },
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 95,
          "reason": null,
          "status": "ok",
        },
      },
      "summary": {
        "candidatesFiltered": 8,
        "candidatesRejectedByGate": 4,
        "candidatesReturned": 12,
        "chains": 0,
        "diagnosticBlocks": 8,
        "enrichedBlocks": 8,
        "executiveProblems": 0,
        "legacyBlocks": 0,
        "residualCandidates": 8,
      },
    },
  },
}
`;

exports[`insight-engine golden master (demo dataset, USD) > produces stable structural output for demo dataset 1`] = `
{
  "rows": [
    {
      "dimensionId": "producto",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 5708,
      "insightTypeId": "product_dead",
      "member": "Chicharrón 120g",
      "metricId": "venta",
      "rank": 1,
      "root_problem_key": null,
      "scoreRounded": 0.6,
      "severity": "MEDIA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 2871,
      "insightTypeId": "meta_gap_temporal",
      "member": "Carlos Ramírez",
      "metricId": "cumplimiento_meta",
      "rank": 2,
      "root_problem_key": null,
      "scoreRounded": 0.7784,
      "severity": "MEDIA",
      "time_scope": "monthly",
    },
    {
      "dimensionId": "producto",
      "direction": "down",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": null,
      "impactoValorRounded": 25355,
      "insightTypeId": "stock_risk",
      "member": "Queso Fresco 400g",
      "metricId": "inventario",
      "rank": 3,
      "root_problem_key": null,
      "scoreRounded": 0.4,
      "severity": "BAJA",
      "time_scope": "rolling",
    },
    {
      "dimensionId": "cliente",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": 0.54,
      "impactoValorRounded": 639,
      "insightTypeId": "migration",
      "member": "Super Económico",
      "metricId": "venta",
      "rank": 4,
      "root_problem_key": null,
      "scoreRounded": 0.2796,
      "severity": "BAJA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "cliente",
      "direction": "up",
      "hasAction": true,
      "hasConclusion": true,
      "hasDescription": true,
      "impactoPctRounded": 0.69,
      "impactoValorRounded": 46,
      "insightTypeId": "migration",
      "member": "Tienda El Carmen",
      "metricId": "num_transacciones",
      "rank": 5,
      "root_problem_key": null,
      "scoreRounded": 0.2659,
      "severity": "BAJA",
      "time_scope": "ytd",
    },
    {
      "dimensionId": "vendedor",
      "direction": "down",
      "hasAction": false,
      "hasConclusion": false,
      "hasDescription": true,
      "impactoPctRounded": 113.66,
      "impactoValorRounded": -1340,
      "insightTypeId": "contribution",
      "member": "Carlos Ramírez",
      "metricId": "unidades",
      "rank": 6,
      "root_problem_key": null,
      "scoreRounded": 1,
      "severity": "ALTA",
      "time_scope": "mtd",
    },
    {
      "dimensionId": "vendedor",
      "direction": "up",
      "hasAction": false,
      "hasConclusion": false,
      "hasDescription": true,
      "impactoPctRounded": 303.88,
      "impactoValorRounded": 1210,
      "insightTypeId": "contribution",
      "member": "María Castillo",
      "metricId": "venta",
      "rank": 7,
      "root_problem_key": null,
      "scoreRounded": 1,
      "severity": "ALTA",
      "time_scope": "mtd",
    },
  ],
  "summary": {
    "datasetSize": {
      "inventory": 20,
      "metas": 900,
      "sales": 94838,
    },
    "engineStatus": {
      "candidatesSelected": 12,
      "candidatesTotal": 209,
      "detectorsEmitted": {
        "change_point": 68,
        "correlation": 0,
        "meta_gap_temporal": 3,
        "motor1": 121,
        "outlier_builder": 4,
        "steady_share": 4,
        "z9_hydration": 14,
      },
      "origins": {
        "cross_engine": 1,
        "executive_compression": 0,
        "legacy_render_adapter": 0,
        "motor1_legacy": 0,
        "motor2_registry_loop": 113,
        "special_builder": 95,
        "unknown": 0,
      },
      "rankerAudit": {
        "portfolioPreview": [
          {
            "currentRank": 1,
            "id": "special_builder:product_dead:producto:venta:Chicharrón 120g",
            "portfolioRank": 2,
            "portfolioScore": 0.503,
            "reasons": [
              "economic_impact",
              "strategic_signal",
              "diversity_preserved",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 2,
            "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Carlos Ramírez",
            "portfolioRank": 1,
            "portfolioScore": 0.553,
            "reasons": [
              "economic_impact",
              "strategic_signal",
              "high_confidence",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 3,
            "id": "special_builder:stock_risk:producto:inventario:Queso Fresco 400g",
            "portfolioRank": 3,
            "portfolioScore": 0.474,
            "reasons": [
              "economic_impact",
              "diversity_preserved",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 4,
            "id": "special_builder:outlier:cliente:frecuencia_compra:Mercado Central",
            "portfolioRank": 7,
            "portfolioScore": 0.303,
            "reasons": [
              "economic_impact",
              "actionable",
              "causal_context",
            ],
          },
          {
            "currentRank": 5,
            "id": "motor2_registry_loop:migration:cliente:venta:Super Económico",
            "portfolioRank": 6,
            "portfolioScore": 0.313,
            "reasons": [
              "economic_impact",
              "strategic_signal",
              "actionable",
              "causal_context",
            ],
          },
        ],
        "protectedCount": 8,
        "regularCap": 6,
        "regularCount": 147,
        "regularSelected": 6,
        "selectedByOrigin": {
          "cross_engine": 0,
          "executive_compression": 0,
          "legacy_render_adapter": 0,
          "motor1_legacy": 0,
          "motor2_registry_loop": 8,
          "special_builder": 4,
          "unknown": 0,
        },
      },
      "stages": {
        "cross_engine": {
          "discardedCount": 0,
          "inputCount": 2767,
          "outputCount": 1,
          "reason": null,
          "status": "ok",
        },
        "dedup": {
          "discardedCount": 47,
          "inputCount": 209,
          "outputCount": 162,
          "reason": null,
          "status": "ok",
        },
        "motor1_legacy": {
          "discardedCount": null,
          "inputCount": 0,
          "outputCount": 0,
          "reason": "Legacy insights enter later through render_adapter/buildRichBlocksFromInsights.",
          "status": "skipped",
        },
        "motor2_registry_loop": {
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 113,
          "reason": null,
          "status": "ok",
        },
        "ranker": {
          "discardedCount": 148,
          "inputCount": 162,
          "outputCount": 14,
          "reason": null,
          "status": "ok",
        },
        "special_builders": {
          "builders": {
            "change_point": {
              "output": 68,
            },
            "cliente_dormido": {
              "output": 2,
            },
            "co_decline": {
              "output": 1,
            },
            "correlation": {
              "output": 0,
            },
            "cross_delta": {
              "discarded": 37,
              "output": 9,
            },
            "inventory_stock": {
              "output": 2,
            },
            "meta_gap_temporal": {
              "output": 3,
            },
            "migration": {
              "output": 1,
            },
            "outlier_builder": {
              "output": 4,
            },
            "product_dead": {
              "output": 1,
            },
            "steady_share": {
              "output": 4,
            },
          },
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 96,
          "reason": null,
          "status": "ok",
        },
      },
    },
    "poolAfterFilter": {
      "byDimension": {
        "cliente": 2,
        "producto": 2,
        "vendedor": 3,
      },
      "byInsightType": {
        "contribution": 2,
        "meta_gap_temporal": 1,
        "migration": 2,
        "product_dead": 1,
        "stock_risk": 1,
      },
      "bySeverity": {
        "ALTA": 2,
        "BAJA": 3,
        "MEDIA": 2,
      },
      "passRate": 0.583,
      "total": 7,
    },
    "poolReturnedByEngine": {
      "byDimension": {
        "cliente": 7,
        "producto": 2,
        "vendedor": 3,
      },
      "byInsightType": {
        "change": 2,
        "contribution": 2,
        "meta_gap_temporal": 1,
        "migration": 2,
        "outlier": 1,
        "product_dead": 1,
        "stock_risk": 1,
        "trend": 2,
      },
      "bySeverity": {
        "ALTA": 5,
        "BAJA": 3,
        "MEDIA": 4,
      },
      "total": 12,
    },
    "runtimeAudit": {
      "origins": {
        "cross_engine": 0,
        "executive_compression": 0,
        "legacy_render_adapter": 0,
        "motor1_legacy": 0,
        "motor2_registry_loop": 8,
        "special_builder": 4,
        "unknown": 0,
      },
      "portfolioPreview": [
        {
          "currentRank": 1,
          "id": "special_builder:product_dead:producto:venta:Chicharrón 120g",
          "portfolioRank": 2,
          "portfolioScore": 0.503,
          "reasons": [
            "economic_impact",
            "strategic_signal",
            "diversity_preserved",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 2,
          "id": "special_builder:meta_gap_temporal:vendedor:cumplimiento_meta:Carlos Ramírez",
          "portfolioRank": 1,
          "portfolioScore": 0.553,
          "reasons": [
            "economic_impact",
            "strategic_signal",
            "high_confidence",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 3,
          "id": "special_builder:stock_risk:producto:inventario:Queso Fresco 400g",
          "portfolioRank": 3,
          "portfolioScore": 0.474,
          "reasons": [
            "economic_impact",
            "diversity_preserved",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 4,
          "id": "special_builder:outlier:cliente:frecuencia_compra:Mercado Central",
          "portfolioRank": 7,
          "portfolioScore": 0.303,
          "reasons": [
            "economic_impact",
            "actionable",
            "causal_context",
          ],
        },
        {
          "currentRank": 5,
          "id": "motor2_registry_loop:migration:cliente:venta:Super Económico",
          "portfolioRank": 6,
          "portfolioScore": 0.313,
          "reasons": [
            "economic_impact",
            "strategic_signal",
            "actionable",
            "causal_context",
          ],
        },
      ],
      "stages": {
        "cross_engine": {
          "discardedCount": 0,
          "inputCount": 2767,
          "outputCount": 1,
          "reason": null,
          "status": "ok",
        },
        "dedup": {
          "discardedCount": 47,
          "inputCount": 209,
          "outputCount": 162,
          "reason": null,
          "status": "ok",
        },
        "executive_compression": {
          "discardedCount": null,
          "inputCount": 7,
          "outputCount": 0,
          "reason": null,
          "status": "skipped",
        },
        "gate": {
          "discardedCount": 5,
          "inputCount": 12,
          "outputCount": 7,
          "reason": null,
          "status": "ok",
        },
        "motor1_legacy": {
          "discardedCount": null,
          "inputCount": 0,
          "outputCount": 0,
          "reason": "Legacy insights enter later through render_adapter/buildRichBlocksFromInsights.",
          "status": "skipped",
        },
        "motor2_registry_loop": {
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 113,
          "reason": null,
          "status": "ok",
        },
        "ranker": {
          "discardedCount": 148,
          "inputCount": 162,
          "outputCount": 14,
          "reason": null,
          "status": "ok",
        },
        "render_adapter": {
          "discardedCount": null,
          "inputCount": 7,
          "outputCount": 7,
          "reason": null,
          "status": "ok",
        },
        "special_builders": {
          "builders": {
            "change_point": {
              "output": 68,
            },
            "cliente_dormido": {
              "output": 2,
            },
            "co_decline": {
              "output": 1,
            },
            "correlation": {
              "output": 0,
            },
            "cross_delta": {
              "discarded": 37,
              "output": 9,
            },
            "inventory_stock": {
              "output": 2,
            },
            "meta_gap_temporal": {
              "output": 3,
            },
            "migration": {
              "output": 1,
            },
            "outlier_builder": {
              "output": 4,
            },
            "product_dead": {
              "output": 1,
            },
            "steady_share": {
              "output": 4,
            },
          },
          "discardedCount": null,
          "inputCount": 2767,
          "outputCount": 96,
          "reason": null,
          "status": "ok",
        },
      },
      "summary": {
        "candidatesFiltered": 7,
        "candidatesRejectedByGate": 5,
        "candidatesReturned": 12,
        "chains": 0,
        "diagnosticBlocks": 7,
        "enrichedBlocks": 7,
        "executiveProblems": 0,
        "legacyBlocks": 0,
        "residualCandidates": 7,
      },
    },
  },
}
`;
